# youtube-transcribe

./: .continuerules  .dockerignore  .gitignore  Dockerfile  README.md  config.json.template  config.py  downloaded_videos.txt  downloader.py  main.py  pyproject.toml  requirements.txt  temp_watchlayer.txt  videos.db  youtube_cookies.json  youtube_cookies.txt
.github/workflows/: python-publish.yml
api/: api.py  config.py  run.py
api/static/: script.js
api/templates/: index.html
app/: app.py  db_migration.py  db_models.py  gui.py  run.py  scanner.py  utils.py
app/templates/: index.html  text_view.html  video.html
logs/: api.log.1
tests/: test.py  test_reporter.py  test_transcriber.py  test_youtube_monitor.py
yourtube/: __init__.py  agents.py  async_worker.py  config.json.template  database.py  main.py  monitor.py  prompts.py  reporter.py  scanner.py  transcriber.py  utils.py  video.py
yourtube/prompts/: __init__.py  process_text.py  summarize.py
yourtube/scripts/: clear_watch_later.py  daemon.py
youtube/: downloader.py  main.py  transcriber.py  utils.py
youtube/prompts/: process_transcription.md  summarize.md
