[project]
name = "prism"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.158.0",
    "openai-whisper>=20240930",
    "torch>=2.5.1",
    "yt-dlp>=2024.12.23",
    "openai>=1.0.0",
    "pytest>=8.3.4",
    "litellm>=1.58.2",
    "webvtt-py>=0.5.1",
    "flask>=3.1.0",
    "sqlalchemy>=2.0.37",
    "markdown>=3.7",
    "flask-cors>=5.0.0",
    "pyqt6>=6.8.0",
    "pyqt6-webengine>=6.8.0",
]

[project.scripts]
youtube = "youtube.main:main"
ytranscribe = "youtube.transcriber:main"
ydownload = "youtube.downloader:main"

[tool.setuptools]
packages = ["youtube"]
