[project]
name = "video-curator"
version = "1.1.0"
description = "Your own youtube assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.158.0",
    "openai-whisper>=20240930",
    "torch>=2.5.1",
    "yt-dlp>=2024.12.23",
    "openai>=1.0.0",
    "pytest>=8.3.4",
    "litellm>=1.58.2",
    "webvtt-py>=0.5.1",
    "sqlalchemy>=2.0.37",
    "markdown>=3.7",
    "ffmpeg-python>=0.2.0",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "schedule>=1.2.2",
    "aiosmtplib>=4.0.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
]

[project.scripts]
yourtube = "api.run:main"

[tool.setuptools]
packages = ["yourtube", "api"]
include-package-data = true

[tool.setuptools.package-data]
"api" = ["templates/*.html", "static/*"]
"yourtube" = ["config.json.template"]
